# rust-backend

./: README.md
app01/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  tutorial.md
app01/src/: main.rs
app02/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  tutorial.md
app02/src/: main.rs
app03/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tutorial.md
app03/src/: main.rs
app04/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  tutorial.md
app04/src/: main.rs
app04/static/: index.html
app05/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tutorial.md
app05/frontend/: package.json
app05/frontend/public/: index.html  manifest.json
app05/frontend/src/: App.tsx  index.tsx
app05/frontend/src/components/: Header.tsx  TaskForm.tsx  TaskList.tsx
app05/frontend/src/contexts/: TaskContext.tsx
app05/frontend/src/services/: api.ts
app05/frontend/src/types/: Task.ts
app05/src/: main.rs
